turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: NEXT_MOVE is already defined as value NEXT_MOVE
val NEXT_MOVE = 1;
    ^Turmite:6: error: NEXT_MOVE  is already defined as value NEXT_MOVE
val NEXT_MOVE = 1;
    ^Turmite:7: error: NEXT_STATE is already defined as value NEXT_STATE
val NEXT_STATE = 2;
    ^Turmite:7: error: NEXT_STATE  is already defined as value NEXT_STATE
val NEXT_STATE = 2;
    ^Turmite:9: error: STOP is already defined as value STOP
val STOP = 0;
    ^Turmite:9: error: STOP  is already defined as value STOP
val STOP = 0;
    ^Turmite:10: error: NOTURN is already defined as value NOTURN
val NOTURN = 1;
    ^Turmite:10: error: NOTURN  is already defined as value NOTURN
val NOTURN = 1;
    ^Turmite:11: error: LEFT is already defined as value LEFT
val LEFT = 2;
    ^Turmite:11: error: LEFT  is already defined as value LEFT
val LEFT = 2;
    ^Turmite:13: error: RIGHT is already defined as value RIGHT
val RIGHT = 8;
    ^Turmite:13: error: RIGHT  is already defined as value RIGHT
val RIGHT = 8;
    ^Turmite:27: error: type mismatch;
 found   : Int
 required: java.awt.Color
  mark(rule(state)(currentColor)(NEW_COLOR))
                                ^